syntax = "proto3";

package inventory;

service InventoryService {
  rpc GetInventory(Empty) returns (Inventory) {}
  rpc RefillProduct(ProductID) returns (Product) {}
  rpc CheckForAvailability(Product) returns (IsAvailable) {}
  rpc SetInventoryHistoryPoint(Inventory) returns (InventoryHistoryPoint) {}
  rpc GetInventoryHistory(Empty) returns (InventoryHistory) {}
}

message Empty {}

message ProductID {
  int32 id = 1;
}

message Product {
  int32 id = 1;
  string name = 2;
  int32 amount = 3;
}

message Inventory {
  repeated Product list = 1;
}

message InventoryHistoryPoint {
  int32 id = 1;
  repeated Product list = 2;
  string created_at = 3;
}

message InventoryHistory {
  repeated InventoryHistoryPoint history = 1;
}

message IsAvailable {
  bool is_available = 1;
}